<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentationlayer.activities.MainActivity"
    >

    <EditText
        android:id="@+id/field"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:padding="8dp"
        android:gravity="center"
        android:hint="Field"
        tools:text="1"
        />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginVertical="16dp"
        android:text="Action"
        />

    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:textSize="40sp"
        tools:text="1"
        />

</LinearLayout>